<?xml version="1.0"?>
<package>
  <name>hiwin_ra610_1476_support</name>
  <version>1.0.1</version>
  <description>The hiwin_ra610_1476_support package</description>
  <author email="brownyu@hiwin.tw">brownyu</author>
  <maintainer email="brownyu@hiwin.tw">brownyu</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>

  </export>
</package>